force-app/main/default/objects/CESContract__c/fields/Product_Subtype_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Product_Subtype_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Based on the selected product, what subtype is it?</description>
    <inlineHelpText>Based on the selected product, what subtype is it?</inlineHelpText>
    <label>Pricing Type</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>