force-app/main/default/objects/CESContract__c/fields/Prorate_Volumes_By__c.field-meta.xml
<CustomField>
    <fullName>Prorate_Volumes_By__c</fullName>
    <description>How the volumes are prorated</description>
    <inlineHelpText>How the volumes are prorated</inlineHelpText>
    <label>Prorate Volumes By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capacity Volume</fullName>
            </value>
            <value>
                <fullName>Annual Volume</fullName>
            </value>
            <value>
                <fullName>Even Distribution</fullName>
            </value>
            <value>
                <fullName>Billing Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>