force-app/main/default/objects/CESContract__c/fields/Safari_Active_Status_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>Safari_Active_Status_Code_ID__c</fullName>
    <formula>&#39;94&#39;</formula>
    <label>Safari Active Status Code ID</label>
    <type>Text</type>
</CustomField>