force-app/main/default/objects/CESContract__c/fields/Safari_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Safari_Contract_Number__c</fullName>
    <description>Contract number for the corresponding Safari document.</description>
    <inlineHelpText>Contract number for the corresponding Safari document.</inlineHelpText>
    <label>Safari Contract Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>