force-app/main/default/objects/CESContract__c/fields/Safari_Key__c.field-meta.xml
<CustomField>
    <fullName>Safari_Key__c</fullName>
    <externalId>true</externalId>
    <label>Safari Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>