force-app/main/default/objects/CESContract__c/fields/Sales_Director_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director_Approval_Required__c</fullName>
    <formula>OR( 
Total_Volume__c &gt;= 240000, 
Tenor__c &gt;= 25 
)</formula>
    <label>Sales Director Approval Required</label>
    <type>Checkbox</type>
</CustomField>