force-app/main/default/objects/CESContract__c/fields/Sell_Off_Source__c.field-meta.xml
<CustomField>
    <fullName>Sell_Off_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sell-Off Source</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>CES Contracts (Sell-Off Source)</relationshipLabel>
    <relationshipName>CES_Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>