force-app/main/default/objects/CESContract__c/fields/service_type__c.field-meta.xml
<CustomField>
    <fullName>service_type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Service Type</relationshipLabel>
    <relationshipName>service_type</relationshipName>
    <type>Lookup</type>
</CustomField>