force-app/main/default/objects/CESContract__c/fields/Shipper_Cashout_Region__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Cashout_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper Cashout Region</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Shipper Cashout Region)</relationshipLabel>
    <relationshipName>CES_Contracts7</relationshipName>
    <type>Lookup</type>
</CustomField>