force-app/main/default/objects/CESContract__c/fields/Specific_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Specific_Billing_Address__c</fullName>
    <formula>IF(Invoice_Accounts_Payable__c == true &amp;&amp; Invoice_Address_is_Notice_Address__c == false
  , Billing_Address__c &amp; &quot;, &quot; &amp; Billing_City__c &amp; &quot;, &quot; &amp;  Billing_State__c &amp; &quot; &quot; &amp;  Billing_Postal_Code__c 
  , null
)</formula>
    <label>Specific Billing Address</label>
    <type>Text</type>
</CustomField>