force-app/main/default/objects/CESContract__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Start Date Old</label>
    <type>Date</type>
</CustomField>