force-app/main/default/objects/CESContract__c/fields/Storage_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Storage_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Strategy</label>
    <referenceTo>Storage_Strategy__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>