force-app/main/default/objects/CESContract__c/fields/Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>Storage_Type__c</fullName>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Non-Common Ownership</fullName>
                <isActive>false</isActive>
                <label>Non-Common Ownership</label>
            </value>
            <value>
                <fullName>Single Ownership with Telemetry</fullName>
                <isActive>false</isActive>
                <label>Single Ownership with Telemetry</label>
            </value>
            <value>
                <fullName>Single Ownership without Telemetry</fullName>
                <isActive>false</isActive>
                <label>Single Ownership without Telemetry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>