force-app/main/default/objects/CESContract__c/fields/Strike_Control__c.field-meta.xml
<CustomField>
    <fullName>Strike_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>controller for a trigger.</description>
    <label>Strike Control</label>
    <type>Checkbox</type>
</CustomField>