force-app/main/default/objects/CESContract__c/fields/supply_pool__c.field-meta.xml
<CustomField>
    <fullName>supply_pool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Pool</label>
    <referenceTo>Supply_Pool__c</referenceTo>
    <relationshipLabel>Supply Pool</relationshipLabel>
    <relationshipName>supply_pool</relationshipName>
    <type>Lookup</type>
</CustomField>