force-app/main/default/objects/CESContract__c/fields/TC_Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>TC_Revision_Date__c</fullName>
    <description>The date and time of the change prompting TC revision process.</description>
    <label>TC Revision Date</label>
    <type>DateTime</type>
</CustomField>