force-app/main/default/objects/CESContract__c/fields/TC_Revision_Details__c.field-meta.xml
<CustomField>
    <fullName>TC_Revision_Details__c</fullName>
    <description>Indicates which contract details have been changed, prompting a revised TC</description>
    <inlineHelpText>Indicates which contract details have been changed, prompting a revised TC</inlineHelpText>
    <label>TC Revision Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>