force-app/main/default/objects/CESContract__c/fields/TC_Revision_Requires_Review__c.field-meta.xml
<CustomField>
    <fullName>TC_Revision_Requires_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Contracts team must review contract changes prior to generating a revised TC.</description>
    <inlineHelpText>Indicates whether Contracts team must review contract changes prior to generating a revised TC.</inlineHelpText>
    <label>TC Revision Requires Review</label>
    <type>Checkbox</type>
</CustomField>