force-app/main/default/objects/CESContract__c/fields/TC_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>TC_Transaction_Type__c</fullName>
    <formula>IF (RecordType.Name = &#39;Base Pricing&#39;
  , &#39;Natural Gas Sales&#39;
  , ""
)</formula>
    <label>TC Transaction Type</label>
    <type>Text</type>
</CustomField>