force-app/main/default/objects/CESContract__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>Opportunity__r.Term__c</formula>
    <label>Term Old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>