force-app/main/default/objects/CESContract__c/fields/Term_New__c.field-meta.xml
<CustomField>
    <fullName>Term_New__c</fullName>
    <label>Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>