force-app/main/default/objects/CESContract__c/fields/Time_from_Submission_to_Issuance_days__c.field-meta.xml
<CustomField>
    <fullName>Time_from_Submission_to_Issuance_days__c</fullName>
    <formula>Date_Issued_by_CA__c - Date_Submitted_for_Approval__c</formula>
    <label>Time from Submission to Issuance (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>