force-app/main/default/objects/CESContract__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basis</fullName>
            </value>
            <value>
                <fullName>Nymex</fullName>
            </value>
            <value>
                <fullName>Nymex + Basis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>