force-app/main/default/objects/CESContract__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trigger Type</label>
    <referenceTo>Trigger_Type__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>