force-app/main/default/objects/CESContract__c/fields/Trueup_Type__c.field-meta.xml
<CustomField>
    <fullName>Trueup_Type__c</fullName>
    <description>Used for safari contract true up type when there is a volume commitment.  Contract level only used for FOM contracts with multiple active premises.  account level = 1, contract level =2, blank = 0</description>
    <label>Trueup Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Level</fullName>
            </value>
            <value>
                <fullName>Contract Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>