force-app/main/default/objects/CESContract__c/fields/UDF_CESUM_Therm__c.field-meta.xml
<CustomField>
    <fullName>UDF_CESUM_Therm__c</fullName>
    <formula>BLANKVALUE( UDF_CESUM__c , 0) / 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UDF CESUM Therm</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>