force-app/main/default/objects/CESContract__c/fields/UDF_Contract_Version__c.field-meta.xml
<CustomField>
    <fullName>UDF_Contract_Version__c</fullName>
    <formula>CASE( Contract_Format__c ,
  &#39;NAESB 2002&#39;,&#39;NAESB 2006&#39;,
  &#39;NAESB 2006&#39;,&#39;NAESB 2006&#39;,
  &#39;Version 3&#39;,&#39;CES Ver3&#39;,
  &#39;Version 3.2&#39;,&#39;CES Ver3.2&#39;,
  &#39;Version 1&#39;,&#39;CES Ver1&#39;,
  &#39;Acquisition&#39;,&#39;Acquisition&#39;,
  &#39;Version 4&#39;,&#39;CES Ver4&#39;,
  &#39;CES Ver2&#39;
)</formula>
    <label>UDF Contract Version</label>
    <type>Text</type>
</CustomField>