force-app/main/default/objects/CESContract__c/fields/UDF_DealTranType__c.field-meta.xml
<CustomField>
    <fullName>UDF_DealTranType__c</fullName>
    <formula>CASE(TEXT( Delivery_Obligation__c ),
  &#39;Firm&#39;, &#39;PriFirm&#39;,
  &#39;Secondary Firm&#39;, &#39;SecFirm&#39;,
  &#39;Interruptible&#39;, &#39;Inter&#39;,
  null
)</formula>
    <label>UDF DealTranType</label>
    <type>Text</type>
</CustomField>