force-app/main/default/objects/CESContract__c/fields/UDF_GUM_Therm__c.field-meta.xml
<CustomField>
    <fullName>UDF_GUM_Therm__c</fullName>
    <formula>BLANKVALUE(UDF_GUM__c, 0) / 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UDF GUM Therm</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>