force-app/main/default/objects/CESContract__c/fields/UDF_Storage_Val__c.field-meta.xml
<CustomField>
    <fullName>UDF_Storage_Val__c</fullName>
    <formula>IF( Storage_Valuation__c , &#39;Yes&#39;, &#39;No&#39;)</formula>
    <label>UDF Storage Val</label>
    <type>Text</type>
</CustomField>