force-app/main/default/objects/CESContract__c/fields/UDF_Telemetry__c.field-meta.xml
<CustomField>
    <fullName>UDF_Telemetry__c</fullName>
    <formula>IF( Telemetry__c , &#39;Yes&#39;, &#39;No&#39;)</formula>
    <label>UDF Telemetry</label>
    <type>Text</type>
</CustomField>