force-app/main/default/objects/CESContract__c/fields/UDF_Transport_Fuel__c.field-meta.xml
<CustomField>
    <fullName>UDF_Transport_Fuel__c</fullName>
    <formula>IF( Transport_Fuel__c , &#39;Yes&#39;, &#39;No&#39;)</formula>
    <label>UDF Transport Fuel</label>
    <type>Text</type>
</CustomField>