force-app/main/default/objects/CESContract__c/fields/UDF_Upstream_Transport__c.field-meta.xml
<CustomField>
    <fullName>UDF_Upstream_Transport__c</fullName>
    <formula>CASE( TEXT( Upstream_Transport__c ),
  &#39;Applicable upstream pipeline transportation fees&#39;, &#39;Upstream Pipeline Transport&#39;,
  &#39;Applicable upstream pipeline transportation fees plus fuel&#39;, &#39;Upstream Pipeline Transport plus Fuel&#39;,
  &#39;Enter Specific Charges&#39;, &#39;Specific Contract Charges&#39;,
  null
)</formula>
    <label>UDF Upstream Transport</label>
    <type>Text</type>
</CustomField>