force-app/main/default/objects/CESContract__c/fields/UDF_Utility_Meter_Read__c.field-meta.xml
<CustomField>
    <fullName>UDF_Utility_Meter_Read__c</fullName>
    <formula>IF(ISPICKVAL( Utility_Meter_Read_Pooling__c ,&#39;applicable meter read/pooling fees&#39;)
  , &#39;Pass Through&#39;
  , TEXT( Utility_Meter_Read_Pooling__c )
)</formula>
    <label>UDF Utility Meter Read</label>
    <type>Text</type>
</CustomField>