force-app/main/default/objects/CESContract__c/fields/UDF_Utility_Transport__c.field-meta.xml
<CustomField>
    <fullName>UDF_Utility_Transport__c</fullName>
    <formula>IF(CONTAINS(TEXT( Utility_Transportation__c ), &#39;CEIP&#39;)
  , &#39;CEIP&#39;
  , TEXT( Utility_Transportation__c )
)</formula>
    <label>UDF Utility Transport</label>
    <type>Text</type>
</CustomField>