force-app/main/default/objects/CESContract__c/fields/UF_Name_AllProductType__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_AllProductType__c</fullName>
    <formula>&#39;AllProductType&#39;</formula>
    <label>UF Name - AllProductType</label>
    <type>Text</type>
</CustomField>