force-app/main/default/objects/CESContract__c/fields/UF_Name_CESUM__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_CESUM__c</fullName>
    <formula>&#39;CES Unit Margin&#39;</formula>
    <label>UF Name - CESUM</label>
    <type>Text</type>
</CustomField>