force-app/main/default/objects/CESContract__c/fields/UF_Name_CUM__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_CUM__c</fullName>
    <formula>&#39;Consultant Unit Fee&#39;</formula>
    <label>UF Name - CUM</label>
    <type>Text</type>
</CustomField>