force-app/main/default/objects/CESContract__c/fields/UF_Name_GUM__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_GUM__c</fullName>
    <formula>&#39;Gross Unit Margin&#39;</formula>
    <label>UF Name - GUM</label>
    <type>Text</type>
</CustomField>