force-app/main/default/objects/CESContract__c/fields/UF_Name_TGUM__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_TGUM__c</fullName>
    <formula>&#39;Total Gross Unit Margin&#39;</formula>
    <label>UF Name - TGUM</label>
    <type>Text</type>
</CustomField>