force-app/main/default/objects/CESContract__c/fields/UF_Name_Transport_Fuel__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Transport_Fuel__c</fullName>
    <formula>&#39;Transport Fuel&#39;</formula>
    <label>UF Name - Transport Fuel</label>
    <type>Text</type>
</CustomField>