force-app/main/default/objects/CESContract__c/fields/UF_Name_Utility_Balancing__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Utility_Balancing__c</fullName>
    <formula>&#39;Utility Balancing&#39;</formula>
    <label>UF Name - Utility Balancing</label>
    <type>Text</type>
</CustomField>