force-app/main/default/objects/CESContract__c/fields/UF_Name_Utility_Cashout__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Utility_Cashout__c</fullName>
    <formula>&#39;Utility Cashout&#39;</formula>
    <label>UF Name - Utility Cashout</label>
    <type>Text</type>
</CustomField>