force-app/main/default/objects/CESContract__c/fields/UF_Name_Utility_Transportation__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Utility_Transportation__c</fullName>
    <formula>&#39;Utility Transport Fee&#39;</formula>
    <label>UF Name - Utility Transportation</label>
    <type>Text</type>
</CustomField>