force-app/main/default/objects/CESContract__c/fields/UF_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>UF_Sync_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UF Sync Error</label>
    <type>Checkbox</type>
</CustomField>