force-app/main/default/objects/CESContract__c/fields/UF_Sync_OK_Base_Contract__c.field-meta.xml
<CustomField>
    <fullName>UF_Sync_OK_Base_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UF Sync OK - Base Contract</label>
    <type>Checkbox</type>
</CustomField>