force-app/main/default/objects/CESContract__c/fields/UF_Sync_OK_CESUM__c.field-meta.xml
<CustomField>
    <fullName>UF_Sync_OK_CESUM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UF Sync OK - CESUM</label>
    <type>Checkbox</type>
</CustomField>