force-app/main/default/objects/CESContract__c/fields/UF_Sync_OK_Storage_Val__c.field-meta.xml
<CustomField>
    <fullName>UF_Sync_OK_Storage_Val__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UF Sync OK - Storage Val</label>
    <type>Checkbox</type>
</CustomField>