force-app/main/default/objects/CESContract__c/fields/UF_Sync_OK_Utility_Meter_Read__c.field-meta.xml
<CustomField>
    <fullName>UF_Sync_OK_Utility_Meter_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UF Sync OK - Utility Meter Read</label>
    <type>Checkbox</type>
</CustomField>