force-app/main/default/objects/CESContract__c/fields/Under_Index_Name__c.field-meta.xml
<CustomField>
    <fullName>Under_Index_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Under Index Name</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Under Index Name)</relationshipLabel>
    <relationshipName>CES_Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>