force-app/main/default/objects/CESContract__c/fields/Under_LDC_Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Under_LDC_Fuel_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Under LDC Fuel Rate</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Under LDC Fuel Rate)</relationshipLabel>
    <relationshipName>CES_ContractsKaM6</relationshipName>
    <type>Lookup</type>
</CustomField>