force-app/main/default/objects/CESContract__c/fields/Under_Pipeline_Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Under_Pipeline_Fuel_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Under Pipeline Fuel Rate</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Under Pipeline Fuel Rate)</relationshipLabel>
    <relationshipName>CES_ContractsKaMG</relationshipName>
    <type>Lookup</type>
</CustomField>