force-app/main/default/objects/CESContract__c/fields/Under_Total_Adder_ABS__c.field-meta.xml
<CustomField>
    <fullName>Under_Total_Adder_ABS__c</fullName>
    <formula>ABS( Under_Total_Adder__c )</formula>
    <label>Under Total Adder ABS</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>