force-app/main/default/objects/CESContract__c/fields/Under_Total_Adder_ABS_for_TC__c.field-meta.xml
<CustomField>
    <fullName>Under_Total_Adder_ABS_for_TC__c</fullName>
    <formula>IF ( ISPICKVAL( MDQ_Unit__c , &#39;Therm&#39; )
   , Under_Total_Adder_ABS__c * 0.1
   , Under_Total_Adder_ABS__c
)</formula>
    <label>Under Total Adder ABS for TC</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>