force-app/main/default/objects/CESContract__c/fields/Under_Total_Adder_ABS_Therm__c.field-meta.xml
<CustomField>
    <fullName>Under_Total_Adder_ABS_Therm__c</fullName>
    <formula>Under_Total_Adder_ABS__c * 0.1</formula>
    <label>Under Total Adder ABS Therm</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>