force-app/main/default/objects/CESContract__c/fields/Upstream_Transport_Commodity_ACA_Fees__c.field-meta.xml
<CustomField>
    <fullName>Upstream_Transport_Commodity_ACA_Fees__c</fullName>
    <description>PER MMBTU Pipeline Transport Commodity &amp; ACA Fees.</description>
    <inlineHelpText>PER MMBTU Pipeline Transport Commodity &amp; ACA Fees.</inlineHelpText>
    <label>Upstream Transport Comm&amp;ACA Fees (MMBtu)</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>