force-app/main/default/objects/CESContract__c/fields/Upstream_Transport_Fee_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Upstream_Transport_Fee_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to pipeline transport fee index</description>
    <inlineHelpText>Lookup to pipeline transport fee index</inlineHelpText>
    <label>Upstream Transport Fee Lookup</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Upstream Transport Fee Lookup)</relationshipLabel>
    <relationshipName>CES_Contracts9</relationshipName>
    <type>Lookup</type>
</CustomField>