force-app/main/default/objects/CESContract__c/fields/Upstream_Transport_Fuel_Charges_for_TC__c.field-meta.xml
<CustomField>
    <fullName>Upstream_Transport_Fuel_Charges_for_TC__c</fullName>
    <formula>IF ( ISPICKVAL( MDQ_Unit__c , &#39;Therm&#39; )
   , Upstream_Transport_Fuel_Charges__c * 0.1
   , Upstream_Transport_Fuel_Charges__c
)</formula>
    <label>Upstream Transport Fuel Charges for TC</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>