force-app/main/default/objects/CESContract__c/fields/Upstream_Transport_Fuel_Charges_Therm__c.field-meta.xml
<CustomField>
    <fullName>Upstream_Transport_Fuel_Charges_Therm__c</fullName>
    <formula>Upstream_Transport_Fuel_Charges__c * 0.1</formula>
    <label>Upstream Transport Fuel Charges Therm</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>