force-app/main/default/objects/CESContract__c/fields/UsageJSON__c.field-meta.xml
<CustomField>
    <fullName>UsageJSON__c</fullName>
    <label>Usage JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>