force-app/main/default/objects/CESContract__c/fields/Utility_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Utility_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Lookup</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>