force-app/main/default/objects/CESContract__c/fields/Utility_Meter_Read_Pooling_Formula__c.field-meta.xml
<CustomField>
    <fullName>Utility_Meter_Read_Pooling_Formula__c</fullName>
    <formula>CASE(TEXT( Utility_Meter_Read_Pooling__c ),
  &#39;applicable meter read/pooling fees&#39;,1,
  &#39;$5.00 per facility per month&#39;, 5,
  &#39;$1.50 per facility per month&#39;, 1.50,
  &#39;$10.00 per facility per month&#39;, 10,
  &#39;$15.00 per facility per month&#39;, 15,
  NULL
)</formula>
    <label>Utility Meter Read Pooling Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>