force-app/main/default/objects/CESContract__c/fields/Utility_Rate_Name__c.field-meta.xml
<CustomField>
    <fullName>Utility_Rate_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Rate Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <filterItems>
            <field>Index__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Utility</value>
        </filterItems>
        <filterItems>
            <field>Index__c.Index_Rate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Index__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Index__c.Utility_1__c</field>
            <operation>equals</operation>
            <valueField>$Source.Utility_Lookup__c</valueField>
        </filterItems>
        <infoMessage>Filter is required for desired results.  DO NOT REMOVE</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Utility Rate Name)</relationshipLabel>
    <relationshipName>CES_Contracts6</relationshipName>
    <type>Lookup</type>
</CustomField>