force-app/main/default/objects/CESContract__c/fields/Utility_Zone__c.field-meta.xml
<CustomField>
    <fullName>Utility_Zone__c</fullName>
    <label>Utility Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>